<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Activityhub</string>
    <string name="map_key">AIzaSyAR1jm67RcCl5vTE6U7uihjwXNKb4Y3yeo</string>
    <string name="font_bold" translatable="false">OpenSans-Bold.ttf</string>
    <string name="font_bold_italic" translatable="false">OpenSans-BoldItalic.ttf</string>
    <string name="font_extra_bold" translatable="false">OpenSans-ExtraBold.ttf</string>
    <string name="font_extra_bold_italic" translatable="false">OpenSans-ExtraBoldItalic.ttf</string>
    <string name="font_italic" translatable="false">OpenSans-Italic.ttf</string>
    <string name="font_light" translatable="false">OpenSans-Light.ttf</string>
    <string name="font_light_italic" translatable="false">OpenSans-LightItalic.ttf</string>
    <string name="font_regular" translatable="false">OpenSans-Regular.ttf</string>
    <string name="font_semibold" translatable="false">OpenSans-Semibold.ttf</string>
    <string name="font_semi_bold_italic" translatable="false">OpenSans-SemiboldItalic.ttf</string>
    <string name="skip">Skip</string>
    <string name="cont">Continue</string>
    <string name="update">Update</string>
    <string name="appSharedPref">IHLP</string>
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="Next">Next</string>
    <string name="ilhp">iLHP</string>
    <string name="setting">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmEmailAddress">Confirm email address</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New user</string>
    <string name="forgot_password">Forgot password</string>
    <string name="dismiss">Dismiss</string>
    <string name="ilhp_sign_up">Activityhub Sign Up</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_ac">Create account</string>
    <string name="terms_and_condition">By submitting this you agree with\nour <u>terms and conditions</u> </string>
    <string name="login">Login</string>
    <string name="send_email">Send email</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="type_in">Type in your email below to reset your password</string>
    <string name="home">Home</string>
    <string name="directory">Directory</string>
    <string name="calender">Calendar</string>
    <string name="goals">Goals  Plans</string>
    <string name="education">Education</string>
    <string name="view_directory_des">View a directory of events,save to \nyour calender and set goals.</string>
    <string name="view_directory">View directory</string>
    <string name="result">Results</string>
    <string name="toast_time_out" translatable="false">Please try again, There is network error</string>
    <string name="toast_net_work" translatable="false">Please try again, Network not available</string>
    <string name="internet_not_available" translatable="false">Please try again, Network not available</string>
    <string name="toast_try_after_sometimes" translatable="false">Something went wrong please try after sometimes..</string>
    <string name="toast_something_wrong" translatable="false">Something went wrong please try again..</string>
    <string name="toast_email" translatable="false">Please enter your email address</string>
    <string name="todo" translatable="false">todo</string>
    <string name="toast_email_valid" translatable="false">Please enter valid email address</string>
    <string name="toast_password" translatable="false">Please enter your password</string>
    <string name="error_valid_email">Please enter a valid email address </string>
    <string name="toast_enter_name">Please enter your name</string>
    <string name="toast_enter_confirm">Please enter your confirm email address</string>
    <string name="error_valid_con_email">Please enter a valid confirm email address </string>
    <string name="err_email_add_dosnt_match">Please enter confirm email address same as email address</string>
    <string name="pls_enter_old_email">Please enter your old email address</string>
    <string name="pls_enter_new_email">Please enter your new email address</string>
    <string name="pls_enter_old_pwd">Please enter ols password</string>
    <string name="pls_enter_new_pwd">Please enter new password</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_profile_second">Personalise your app by filling \nyour details below</string>
    <string name="condition">Condition</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sex">Gender</string>
    <string name="blood_type">Blood type</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity level</string>
    <string name="interests">Interests</string>
    <string name="weight">Weight</string>
    <string name="result_survey">Results survey</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yourProfile">Your Profile</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="emailId">email</string>
    <string name="profileImage">profile_image</string>
    <string name="device_token">device_token</string>
    <string name="token">token</string>
    <string name="auth_token">auth_token</string>
    <string name="bearer">Bearer</string>
    <string name="isFirstTimeYourProfile">isFirstTimeYourProfile</string>
    <string name="isLogin">isLogin</string>
    <string name="isRememberMe">rememberMe</string>
    <string name="rememberMeEmail">rememberMeEmail</string>
    <string name="rememberMePass">rememberMePass</string>
    <string name="enter_condition">Enter condition</string>
    <string name="account_settings">Account settings</string>
    <string name="reset_pwd">Reset password</string>
    <string name="sync">Services and fitness devices sync</string>
    <string name="preferences">Preferences</string>
    <string name="units_of_measurement">Units of measurement</string>
    <string name="your_details">Your details</string>
    <string name="logout">Logout</string>
    <string name="update_email_address">Update email address</string>
    <string name="lbl_take_photo">Take Photo</string>
    <string name="lbl_choose_from_gallery">Choose from Gallery</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="dialog_some_thing_wrong">Please choose another image from gallery.</string>
    <string name="nav_edit_profile">Edit Profile</string>
    <string name="addPhoto">Add Photo!</string>
    <string name="takePhoto">Take Photo</string>
    <string name="selectFromGallery">Choose from Gallery</string>
    <string name="old_email_address">Old email address</string>
    <string name="new_email_address">New email address</string>
    <string name="save_changes">Save changes</string>
    <string name="update_password">Update password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="tv_title_text">Are you sure want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="manage_devices">Manage devices</string>
    <string name="connect_a_new_devices_to_ilhp">Connect a new devices to ILHP</string>
    <string name="use_your_gps_devices_to_upload_directly_to_ilhp">Use your GPS devices to upload directly to ILHP</string>
    <string name="service">Services</string>
    <string name="fitbit">Fitbit</string>
    <string name="connect_health">Connect Health</string>
    <string name="health">Health</string>
    <string name="under_armour">Under Armour</string>
    <string name="connect_with_fitbit">Connect with Fitbit</string>
    <string name="connect">Connect</string>
    <string name="when_you">When you connect with your Strava account,calories,fitness and distance data from you Strava wiil be available on IHLP</string>
    <string name="data_from">Data from you Strava will be synced with ILHP</string>
    <string name="event_directory">Event Directory</string>
    <string name="viewing_all_events">Viewing all events</string>
    <string name="filter">Filter</string>
    <string name="no_event_found">No event found</string>
    <string name="overview">Overview</string>
    <string name="location">Location</string>
    <string name="rating">Rating</string>
    <string name="view_event">View Event</string>
    <string name="add_to_calender">Add to calendar</string>
    <string name="current_weight">Current weight</string>
    <string name="filter_result">Filter results</string>
    <string name="direction">Directions</string>
    <string name="disease_group">Disease Group</string>
    <string name="intensity">Intensity</string>
    <string name="price_range">Price range</string>
    <string name="filters">Filters</string>
    <string name="clear_all">Clear all</string>
    <string name="apply">Apply</string>
    <string name="notification">Notifications</string>
    <string name="calendar_event">Calendar Event</string>
    <string name="are_you_attending_this_event">Are you attending this event?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="did_not_attend">Did not attend</string>
    <string name="ok">Set</string>
    <string name="ft">ft</string>
    <string name="inch">in</string>
    <string name="st">st</string>
    <string name="lb">lb</string>
    <string name="this_year">This Year</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Prefer not to say</string>
    <string name="no_app_found">No apps found to perform this action.</string>
    <string name="email_hint">Email (name@example.com)</string>
    <string name="go">GO</string>
    <string name="kilometers">Kilometers</string>
    <string name="allow_notifications">Allow event notifications</string>
    <string name="allow_survey_notifications">Allow survey notifications</string>
    <string name="remind_me_on_a_day">Remind me on a day</string>
    <string name="alarm">Alarm</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="remind_me_of_location">Remind me of location</string>
    <string name="try_after_some_time">Please try after sometime.</string>
    <string name="search">Search</string>
    <string name="search_directory_message">Please enter directory name or location for search.</string>
    <string name="logout_message">Are you sure you want\nto logout?</string>
    <string name="close_no">No</string>
    <string name="close_yes">Yes</string>
    <string name="view">View</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="event_not_found">Event not found</string>
    <string name="education_desc">View our vast selection of education videos, and tips to help you learn and manage your illness</string>
    <string name="tap_star_message">Tap a star to rate it</string>
    <string name="results">Results</string>
    <string name="my_assessment_plan">My Assessment Plan</string>
    <string name="patient_reported_outcome_measure_prom">Patient Reported Outcome Measure (PROM)</string>
    <string name="done">Done</string>
    <string name="msg_app_exit" translatable="false">Touch again to exit.</string>
    <string name="date">Date</string>
</resources>