<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <com.activityhub.utils.other.MyCustomTextView
        android:id="@+id/tvConnectFragmentIhlpDes"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingBottom="@dimen/_30sdp"
        android:text="@string/when_you"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small"
        app:setTypeFace="@string/font_regular" />

    <com.activityhub.utils.other.MyCustomTextView
        android:id="@+id/tvConnectFragmentIhlpSynced"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvConnectFragmentIhlpDes"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/data_from"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small"
        app:setTypeFace="@string/font_semibold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvConnectFragmentIhlpSynced"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:src="@drawable/ic_fitbit" />

    <com.activityhub.utils.other.MyCustomButton
        android:id="@+id/btntvConnectFragmentIhlpConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvConnectFragmentIhlpDes"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:background="@drawable/bg_button_blue_square"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        app:setTypeFace="@string/font_regular" />

</RelativeLayout>
