<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha_30"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"

                android:background="@drawable/dialog_calander_event_circle"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_svg_white_calendar"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <com.activityhub.utils.other.MyCustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/calendar_event"
                android:textColor="@color/black"
                android:textSize="@dimen/font_small"
                app:setTypeFace="@string/font_semibold" />
        </LinearLayout>

        <com.activityhub.utils.other.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:maxLines="1"
            android:text="@string/are_you_attending_this_event"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small"
            app:setTypeFace="@string/font_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:weightSum="2">

            <com.activityhub.utils.other.MyCustomButton
                android:id="@+id/btnDialogAddCalendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_dialog_calendar_event"
                android:gravity="center"
                android:text="@string/add_to_calender"
                android:textAllCaps="false"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_small"
                app:setTypeFace="@string/font_regular" />

            <com.activityhub.utils.other.MyCustomButton
                android:id="@+id/btnDialogAddCalendarDiscard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_dialog_calendar_event"
                android:gravity="center"
                android:text="@string/discard"
                android:textAllCaps="false"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_small"
                app:setTypeFace="@string/font_regular" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>